--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,8 @@
 .home {
 
   .intro {
+    padding-top: 100px;
+    
     img {
       border-radius:5px;
       width: 100%;
