--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,6 +3,11 @@
 .nav {
     .custom-flex(column, center, center);
     padding: 10px 0;
+    height: 100px;
+    background-color: @waterloo;
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%,0);
 
     h1 {
         font-size: 4rem;
